# Define class for point tracking
class Point:
    def __init__(self, x=0, y=0):
        self.x:int = x
        self.y:int = y