# Define class for velocity measurement
class Velocity:
    def __init__(self, x=0, y=0):
        self.dx = x
        self.dy = y